--- a/app/src/main/res/navigation/power_training_detail_nav_graph.xml
+++ b/app/src/main/res/navigation/power_training_detail_nav_graph.xml
@@ -13,15 +13,21 @@
         <action
             android:id="@+id/action_powerTrainingDetailFragment_to_powerExerciseListFragment"
             app:destination="@id/powerExerciseListFragment"
-            app:enterAnim="@android:anim/slide_in_left" />
+            app:enterAnim="@android:anim/slide_in_left"
+            app:popEnterAnim="@android:anim/slide_in_left"
+            app:popExitAnim="@android:anim/slide_out_right" />
         <action
             android:id="@+id/action_powerTrainingDetailFragment_to_powerExercisePackListFragment"
             app:destination="@id/powerExercisePackListFragment"
-            app:enterAnim="@android:anim/slide_in_left" />
+            app:enterAnim="@android:anim/slide_in_left"
+            app:popEnterAnim="@android:anim/slide_in_left"
+            app:popExitAnim="@android:anim/slide_out_right" />
         <action
             android:id="@+id/action_powerTrainingDetailFragment_to_powerDateListFragment"
             app:destination="@id/powerDateYearListFragment"
-            app:enterAnim="@android:anim/slide_in_left" />
+            app:enterAnim="@android:anim/slide_in_left"
+            app:popEnterAnim="@android:anim/slide_in_left"
+            app:popExitAnim="@android:anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/powerExerciseListFragment"
@@ -31,7 +37,8 @@
         <action
             android:id="@+id/action_powerExerciseListFragment_to_powerExerciseCreationFragment"
             app:destination="@id/powerExerciseCreationFragment"
-            app:enterAnim="@android:anim/slide_in_left" />
+            app:enterAnim="@android:anim/slide_in_left"
+            app:popExitAnim="@android:anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/powerExerciseCreationFragment"
@@ -46,7 +53,8 @@
         <action
             android:id="@+id/action_powerExercisePackListFragment_to_powerExercisePackCreationFragment"
             app:destination="@id/powerExercisePackCreationFragment"
-            app:enterAnim="@android:anim/slide_in_left" />
+            app:enterAnim="@android:anim/slide_in_left"
+            app:popExitAnim="@android:anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/powerExercisePackCreationFragment"
@@ -61,11 +69,15 @@
         <action
             android:id="@+id/action_powerDateListFragment_to_powerDateCreationFragment"
             app:destination="@id/powerDateCreationFragment"
-            app:enterAnim="@android:anim/slide_in_left" />
+            app:enterAnim="@android:anim/slide_in_left"
+            app:popEnterAnim="@android:anim/slide_in_left"
+            app:popExitAnim="@android:anim/slide_out_right" />
         <action
             android:id="@+id/action_powerDateYearListFragment_to_powerDateMonthListFragment"
             app:destination="@id/powerDateMonthListFragment"
-            app:enterAnim="@android:anim/slide_in_left" />
+            app:enterAnim="@android:anim/slide_in_left"
+            app:popEnterAnim="@android:anim/slide_in_left"
+            app:popExitAnim="@android:anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/powerDateCreationFragment"
@@ -75,7 +87,11 @@
         <action
             android:id="@+id/action_powerDateCreationFragment_to_powerDateListFragment"
             app:destination="@id/powerDateYearListFragment"
-            app:enterAnim="@android:anim/slide_in_left" />
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popExitAnim="@android:anim/slide_out_right"
+            app:popUpTo="@id/powerTrainingDetailFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/powerDateMonthListFragment"
@@ -85,7 +101,9 @@
         <action
             android:id="@+id/action_powerDateMonthListFragment_to_powerDateDayListFragment"
             app:destination="@id/powerDateDayListFragment"
-            app:enterAnim="@android:anim/slide_in_left" />
+            app:enterAnim="@android:anim/slide_in_left"
+            app:popEnterAnim="@android:anim/slide_in_left"
+            app:popExitAnim="@android:anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/powerDateDayListFragment"
