--- a/app/src/main/res/navigation/power_training_detail_nav_graph.xml
+++ b/app/src/main/res/navigation/power_training_detail_nav_graph.xml
@@ -42,7 +42,7 @@
     </fragment>
     <fragment
         android:id="@+id/powerExerciseCreationFragment"
-        android:name="com.thedistantblue.triaryapp.mainscreen.power.detail.exercise.PowerExerciseCreationFragment"
+        android:name="com.thedistantblue.triaryapp.mainscreen.power.detail.exercise.PowerExerciseFragment"
         android:label="PowerExerciseCreationFragment"
         tools:layout="@layout/training_detail_exercise_layout"/>
     <fragment
@@ -58,7 +58,7 @@
     </fragment>
     <fragment
         android:id="@+id/powerExercisePackCreationFragment"
-        android:name="com.thedistantblue.triaryapp.mainscreen.power.detail.exercisepack.PowerExercisePackCreationFragment"
+        android:name="com.thedistantblue.triaryapp.mainscreen.power.detail.exercisepack.PowerExercisePackFragment"
         android:label="PowerExercisePackCreationFragment"
         tools:layout="@layout/training_detail_exercise_pack_layout"/>
     <fragment
@@ -81,7 +81,7 @@
     </fragment>
     <fragment
         android:id="@+id/powerDateCreationFragment"
-        android:name="com.thedistantblue.triaryapp.mainscreen.power.detail.date.PowerDateCreationFragment"
+        android:name="com.thedistantblue.triaryapp.mainscreen.power.detail.date.PowerDateFragment"
         android:label="PowerDateCreationFragment"
         tools:layout="@layout/training_detail_date_layout">
         <action
