Fixes graph and adds empty kotlin files
refs #18

--- a/app/src/main/res/navigation/power_training_detail_nav_graph.xml
+++ b/app/src/main/res/navigation/power_training_detail_nav_graph.xml
@@ -44,7 +44,7 @@
             app:popExitAnim="@android:anim/slide_out_right" />
         <argument
             android:name="training"
-            app:argType="com.thedistantblue.triaryapp.entities.composite.TrainingDetails" />
+            app:argType="com.thedistantblue.triaryapp.entities.composite.details.TrainingDetails" />
     </fragment>
     <fragment
         android:id="@+id/powerExerciseCreationFragment"
@@ -67,7 +67,7 @@
             app:popExitAnim="@android:anim/slide_out_right" />
         <argument
             android:name="training"
-            app:argType="com.thedistantblue.triaryapp.entities.composite.TrainingDetails" />
+            app:argType="com.thedistantblue.triaryapp.entities.composite.details.TrainingDetails" />
     </fragment>
     <fragment
         android:id="@+id/powerExercisePackCreationFragment"
@@ -97,7 +97,7 @@
             app:popExitAnim="@android:anim/slide_out_right" />
         <argument
             android:name="training"
-            app:argType="com.thedistantblue.triaryapp.entities.composite.TrainingDetails" />
+            app:argType="com.thedistantblue.triaryapp.entities.composite.details.TrainingDetails" />
     </fragment>
     <fragment
         android:id="@+id/powerDateCreationFragment"
