Fixes update of list, adds toasts on create and update actions
refs #18

--- a/app/src/main/res/layout/training_detail_exercise_layout.xml
+++ b/app/src/main/res/layout/training_detail_exercise_layout.xml
@@ -26,7 +26,7 @@
             style="@style/TextInputEditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/training_detail_exercise_creation_dialog_name_input_hint" />
+            android:hint="" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
